--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "import/prefer-default-export": "off",
+    "import/extensions":"off",
+    "import/no-unresolved":"off"
   }
 }
