--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "react/jsx-filename-extension": "off",
     "import/prefer-default-export": "off",
     "import/extensions":"off",
-    "import/no-unresolved":"off"
+    "import/no-unresolved":"off",
+    "class-methods-use-this":"off"
   }
 }
