--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "import/prefer-default-export": "off",
     "import/extensions":"off",
     "import/no-unresolved":"off",
-    "class-methods-use-this":"off"
+    "class-methods-use-this":"off",
+    "react/jsx-no-bind": "off"
   }
 }
