--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
